fix image spacing issues

--- a/example/style.css
+++ b/example/style.css
@@ -37,4 +37,8 @@
   display:block;
   margin-left:auto;
   margin-right:auto;
+  max-height: 450px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
+
